<resources>
    <string name="app_name">OpenFoodFacts</string>
    <string name="product_barcode">Barcode : %1$s</string>
    <string name="product_quantity">Quantity : %1$s</string>
    <string name="product_ingredients">Ingredients : %1$s</string>
    <string name="product_seller_countries">Sold in: %1$s</string>
    <string name="product_allergies">Allergies : %1$s</string>
    <string name="product_additives">Additives : %1$s</string>
    <string name="product_details_nutrition_title">Nutrient levels for 100 g</string>
    <string name="tab_summary">Summary</string>
    <string name="tab_array">Array</string>
    <string name="tab_nutrition">Nutrition</string>
    <string name="energies">Énergie</string>
    <string name="fat">Matières grasses</string>
    <string name="glucides">Glucides</string>
    <string name="satured_fat">dont Acides gras saturés</string>
    <string name="sugar">dont Sucres</string>
    <string name="fibre">Fibres alimentaires</string>
    <string name="prot">Protéines</string>
    <string name="salt">Sel</string>
    <string name="sodium">Sodium</string>
    <string name="col_100g">Pour 100g</string>
    <string name="col_portion">Par part</string>
</resources>